# mii-sound

./: .gitignore  Cargo.toml  LICENSE  README.md  mii-sound.http  specs.md
.github/workflows/: ci.yml  publish.yml  release.yml
src/: cli.rs  exit.rs  main.rs  proto.rs  synth.rs  transport.rs  worker.rs
src/client/: mod.rs  tts.rs
src/server/: holder.rs  mod.rs  relay.rs  tts.rs
