[package]
name = "mii-sound"
version = "0.1.0"
edition = "2024"

[dependencies]
voxcpm-rs = { version = "0.2.0", features = ["cpu", "wgpu"] }
burn = { version = "0.20", default-features = false }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "sync", "time", "signal", "fs"] }
anyhow = "1"
thiserror = "2"
humantime = "2"
bytes = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5"
interprocess = { version = "2", features = ["tokio"] }
