[package]
name = "mii-sound"
version = "0.4.0"
edition = "2024"
description = "A small, composable, unix-y sound generation CLI fueled by voxcpm-rs."
license = "Apache-2.0"
repository = "https://github.com/mii-nipah/mii-sound"
homepage = "https://github.com/mii-nipah/mii-sound"
documentation = "https://github.com/mii-nipah/mii-sound#readme"
authors = ["nipah~✰! <mii_nipah@pm.me>"]
readme = "README.md"
keywords = ["tts", "audio", "voxcpm", "cli", "speech"]
categories = ["command-line-utilities", "multimedia::audio"]

[features]
default = ["vulkan-bf16"]
vulkan-bf16 = ["voxcpm-rs/vulkan"]

[dependencies]
voxcpm-rs = { version = "0.4.0", features = ["wgpu"] }
burn = { version = "0.20", default-features = false }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "sync", "time", "signal", "fs", "process"] }
anyhow = "1"
thiserror = "2"
humantime = "2"
bytes = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5"
interprocess = { version = "2", features = ["tokio"] }
mii-http-client = "0.1.1"
half = "2"

[patch.crates-io]
burn-cubecl  = { git = "https://github.com/mii-nipah/voxcpm-rs", rev = "cc27585ea6ba98b5fbab77792b2df9b52219b034" }
cubecl-spirv = { git = "https://github.com/mii-nipah/voxcpm-rs", rev = "cc27585ea6ba98b5fbab77792b2df9b52219b034" }
